--- a/TaxiDepo.Client/Views/CarWindow.axaml
+++ b/TaxiDepo.Client/Views/CarWindow.axaml
@@ -5,7 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="TaxiDepo.Client.Views.CarWindow"
 		xmlns:vm="using:TaxiDepo.Client.ViewModels"
-        Title="Редактирование группы"
+        Title="Р РµРґР°РєС‚РёСЂРѕРІР°РЅРёРµ РіСЂСѓРїРїС‹"
 		SizeToContent="Height"
 		MaxWidth="1000">
 	<Design.DataContext>
@@ -16,12 +16,12 @@
 		<StyleInclude Source="/TaxiDepoStyles.axaml"/>
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, *" ColumnDefinitions="Auto, Auto, Auto, Auto, *">
-		<Label Grid.Row="0" Grid.Column="0">Id</Label>
-		<Label Grid.Row="0" Grid.Column="1">Model</Label>
-		<Label Grid.Row="0" Grid.Column="2">Color</Label>
-		<Label Grid.Row="0" Grid.Column="3">Number</Label>
-		<Label Grid.Row="0" Grid.Column="4">DriverId</Label>
+	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, *" ColumnDefinitions="Auto, Auto, Auto, Auto, Auto">
+		<Label Classes="Window" Grid.Row="0" Grid.Column="0">Id</Label>
+		<Label Classes="Window" Grid.Row="0" Grid.Column="1">Model</Label>
+		<Label Classes="Window" Grid.Row="0" Grid.Column="2">Color</Label>
+		<Label Classes="Window" Grid.Row="0" Grid.Column="3">Number</Label>
+		<Label Classes="Window" Grid.Row="0" Grid.Column="4">DriverId</Label>
 
 		<TextBox Grid.Row="1" Grid.Column="0" Text="{Binding Id}"/>
 		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding CarModel}"/>
@@ -32,7 +32,7 @@
 
 		<StackPanel Grid.Row="2" Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
-			<Button IsCancel="True" Click="CancelButton_OnClick">Отмена</Button>
+			<Button IsCancel="True" Click="CancelButton_OnClick">РћС‚РјРµРЅР°</Button>
 		</StackPanel>
 	</Grid>
 
