--- a/RentalService.Client/Views/VehicleModelWindow.axaml
+++ b/RentalService.Client/Views/VehicleModelWindow.axaml
@@ -9,27 +9,30 @@
         Title="Editing a vehicle model"
         MaxWidth="500"
         SizeToContent="Height">
-    
+
     <Design.DataContext>
-        <vm:VehicleModelViewModel/>
+        <vm:VehicleModelViewModel />
     </Design.DataContext>
-    
+
     <Window.Styles>
-        <StyleInclude Source="/RentalServiceStyles.axaml"></StyleInclude>
+        <StyleInclude Source="/RentalServiceStyles.axaml" />
     </Window.Styles>
-    
+
 
     <Grid RowDefinitions="Auto,*,*,*,*,*,*" ColumnDefinitions="Auto, *,*">
         <Label Grid.Row="0" Grid.Column="0">Model</Label>
         <Label Grid.Row="1" Grid.Column="0">Brand</Label>
-        
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Model}"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Brand}"></TextBox>
-        <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal">
+
+        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Model}" />
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Brand}" />
+        <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Right"
+                    Orientation="Horizontal">
             <Button IsDefault="True" Command="{Binding OkButtonOnClick}">Ok</Button>
-            <Button 
-                IsCancel="True" Click="CancelButton_OnClick">Cancel</Button>
+            <Button
+                IsCancel="True" Click="CancelButton_OnClick">
+                Cancel
+            </Button>
         </StackPanel>
     </Grid>
-    
+
 </Window>
