--- a/RentalService.Client/Views/VehicleWindow.axaml
+++ b/RentalService.Client/Views/VehicleWindow.axaml
@@ -9,29 +9,32 @@
         Title="Editing a vehicle"
         MaxWidth="500"
         SizeToContent="Height">
-    
+
     <Design.DataContext>
-        <vm:VehicleViewModel/>
+        <vm:VehicleViewModel />
     </Design.DataContext>
-    
+
     <Window.Styles>
-        <StyleInclude Source="/RentalServiceStyles.axaml"></StyleInclude>
+        <StyleInclude Source="/RentalServiceStyles.axaml" />
     </Window.Styles>
-    
+
 
     <Grid RowDefinitions="Auto,*,*,*,*,*,*" ColumnDefinitions="Auto, *,*">
         <Label Grid.Row="0" Grid.Column="0">Number</Label>
         <Label Grid.Row="1" Grid.Column="0">VehicleModelId</Label>
         <Label Grid.Row="2" Grid.Column="0">Colour</Label>
-        
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Number}"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding VehicleModelId}"></TextBox>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Colour}"></TextBox>
-        <StackPanel Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal">
+
+        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Number}" />
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding VehicleModelId}" />
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Colour}" />
+        <StackPanel Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Right"
+                    Orientation="Horizontal">
             <Button IsDefault="True" Command="{Binding OkButtonOnClick}">Ok</Button>
-            <Button 
-                IsCancel="True" Click="CancelButton_OnClick">Cancel</Button>
+            <Button
+                IsCancel="True" Click="CancelButton_OnClick">
+                Cancel
+            </Button>
         </StackPanel>
     </Grid>
-    
+
 </Window>
