--- a/RentalService.Client/Views/IssuedCarWindow.axaml
+++ b/RentalService.Client/Views/IssuedCarWindow.axaml
@@ -9,33 +9,35 @@
         Title="Editing a issued car"
         MaxWidth="500"
         SizeToContent="Height">
-    
+
     <Design.DataContext>
-        <vm:IssuedCarViewModel/>
+        <vm:IssuedCarViewModel />
     </Design.DataContext>
-    
+
     <Window.Styles>
-        <StyleInclude Source="/RentalServiceStyles.axaml"></StyleInclude>
+        <StyleInclude Source="/RentalServiceStyles.axaml" />
     </Window.Styles>
-    
+
 
     <Grid RowDefinitions="Auto,*,*,*,*,*,*" ColumnDefinitions="Auto, *,*">
         <Label Grid.Row="0" Grid.Column="0">VehicleId</Label>
         <Label Grid.Row="1" Grid.Column="0">ClientId</Label>
         <Label Grid.Row="2" Grid.Column="0">RentalInformationId</Label>
         <Label Grid.Row="3" Grid.Column="0">RefundInformationId</Label>
-        
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding VehicleId}"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding ClientId}"></TextBox>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding RentalInformationId}"></TextBox>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding RefundInformationId}"></TextBox>
 
-        <StackPanel Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal">
+        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding VehicleId}" />
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding ClientId}" />
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding RentalInformationId}" />
+        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding RefundInformationId}" />
+
+        <StackPanel Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Right"
+                    Orientation="Horizontal">
             <Button IsDefault="True" Command="{Binding OkButtonOnClick}">Ok</Button>
-            <Button 
-                IsCancel="True" Click="CancelButton_OnClick">Cancel</Button>
+            <Button
+                IsCancel="True" Click="CancelButton_OnClick">
+                Cancel
+            </Button>
         </StackPanel>
     </Grid>
-    
-</Window>
 
+</Window>
